Updating gitignore for large processed files (voom_CCLE).

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 CCLE_RNAseq_genes_counts_20180929.gct
 GDSC2_fitted_dose_response_25Feb20.csv
 GDSC2_fitted_dose_response_27Oct23.xlsx
+data/voom_CCLE.rds
